--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -106,6 +106,16 @@ header h1 a:hover {
   transition: all 0.5s ease;
 }
 
+.timer-row {
+  display: flex;
+  justify-content: space-between;
+}
+
+.time {
+  padding-right: 20px;
+}
+
+
 /* START utility styles */
 .flex-row {
   display: flex;
