--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -44,7 +44,7 @@ header {
   z-index: 9999;
   margin: 0 auto 5px auto;
   padding: 20px;
-  background-color: rgb(1, 1, 1, 0);
+  background-color: rgb(255, 255, 255, .9);
 }
 
 header nav {
@@ -67,10 +67,11 @@ header nav ul li a {
   padding: 20px 20px;
   font-size: calc(16px + 0.55vw);
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  color: var(--secondary-color);
-  background-color: rgb(74, 76, 79, 0.5);
+  color: var(--primary-color);
+ /* background-color: rgb(74, 76, 79, 0.5);*/
   text-decoration: none;
   margin: 10px;
+  
 }
 
 header nav ul li a:hover {
@@ -89,11 +90,12 @@ header h1 {
 header h1 a {
   font-weight: bold;
   font-size: calc(24px + 0.75vw);
-  color: var(--secondary-color);
+  color: var(--primary-color);
   margin: 20px;
   padding: 10px;
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  background-color: rgb(74, 76, 79, 0.5);
+  /*
+  background-color: rgb(74, 76, 79, 0.5);*/
   text-decoration: none;
 }
 
@@ -107,7 +109,7 @@ header h1 a:hover {
 }
 
 .answer-status {
-  color:hsl(222, 21%, 76%);
+  color: hsl(222, 21%, 76%);
   border-top: hsl(222, 21%, 76%) 3px solid;
   border-radius: 0px;
   font-style: italic;
@@ -141,6 +143,13 @@ header h1 a:hover {
 
 .high-scores {
   text-align: left;
+}
+
+.high-scores ol {
+  background-color: #c7d9ff;
+  padding: 20px;
+  padding-left: 100px;
+  margin-top: 35px;
 }
 
 #main-title {
@@ -204,6 +213,7 @@ header h1 a:hover {
   justify-content: center;
   font-weight: bold;
   white-space: nowrap;
+  margin-top: 20px;
 }
 
 .submit-form-button:hover {
@@ -328,7 +338,30 @@ footer div {
     text-align: center;
     width: 100%;
   }
+
+  .answers button {
+    width: 75%;
+  }
+
+  .submit-form {
+    flex-direction: column;
+  }
 }
 
 @media screen and (max-width: 640px) {
+  .answers button {
+    width: 100%;
+  }
+
+  #main-title.question-title {
+    width: 100%;
+  }
+
+  .flex-row {
+    flex-direction: column;
+  }
+
+  #sub-title {
+    width: 100%;
+  }
 }
